--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -19,8 +19,8 @@ collections:
       - {label: "Image caption", name: "imageAlt", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
       
-  - name: "about" 
-    label: "About"
+  - name: "other" 
+    label: "direck links"
     folder: "src"
     create: true 
     slug: "{{slug}}" 
@@ -29,4 +29,5 @@ collections:
       - {label: "Author", name: "author", widget: "string"}
       - {label: "Tags", name: "tags", widget: "list", default: ["about"] }
       - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "layout", name: "layout", widget: "list", default: ["article.njk"] }
       
