--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
   name: git-gateway
+  repo: timplay33/JAMStack-blog-site
   branch: main
 media_folder: "public/assets/blog" 
 public_folder: "/assets/blog" 
