updated admin interface

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -2,33 +2,37 @@ backend:
   name: git-gateway
   branch: main
 publish_mode: editorial_workflow
-media_folder: "public/assets/blog" 
-public_folder: "/assets/blog" 
+media_folder: "public/assets/blog"
+public_folder: "/assets/blog"
 collections:
-  - name: "blog" 
+  - name: "blog"
     label: "Blog"
     folder: "src/blog"
-    create: true 
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" 
-    fields: 
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Description", name: "description", widget: "string"}
-      - {label: "Author", name: "author", widget: "string"}
-      - {label: "Date", name: "date", widget: "datetime"}
-      - {label: "Tags", name: "tags", widget: "list", default: ["post"] }
-      - {label: "Featured Image", name: "image", widget: "image"}
-      - {label: "Image caption", name: "imageAlt", widget: "string"}
-      - {label: "Body", name: "body", widget: "markdown"}
-      
-  - name: "other" 
-    label: "direck links"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Description", name: "description", widget: "string" }
+      - { label: "Author", name: "author", widget: "string" }
+      - { label: "Date", name: "date", widget: "datetime" }
+      - { label: "Tags", name: "tags", widget: "list", default: ["post"] }
+      - { label: "Featured Image", name: "image", widget: "image" }
+      - { label: "Image caption", name: "imageAlt", widget: "string" }
+      - { label: "Body", name: "body", widget: "markdown" }
+
+  - name: "sites"
+    label: "Sites"
     folder: "src"
-    create: true 
-    slug: "{{slug}}" 
-    fields: 
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Author", name: "author", widget: "string"}
-      - {label: "Tags", name: "tags", widget: "list", default: ["about"] }
-      - {label: "Body", name: "body", widget: "markdown"}
-      - {label: "layout", name: "layout", widget: "string", default: "article.njk" }
-      
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Author", name: "author", widget: "string" }
+      - { label: "Tags", name: "tags", widget: "list", default: ["about"] }
+      - { label: "Body", name: "body", widget: "markdown" }
+      - {
+          label: "layout",
+          name: "layout",
+          widget: "string",
+          default: "article.njk",
+        }
